--- a/clean_duplication.ipynb
+++ b/clean_duplication.ipynb
@@ -6,8 +6,131 @@
    "source": [
     "# `clean_duplication()` String matching in a column\n",
     "\n",
-    "Match strings in \n",
-    "\n"
+    "Match strings in \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-20T16:58:12.815750Z",
+     "start_time": "2020-08-20T16:58:12.716Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# dataframe with cleaned string values\n",
+    "df_clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-20T16:58:12.795955Z",
+     "start_time": "2020-08-20T16:58:12.360342Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_clean' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-10d117f39786>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# dataframe with cleaned string values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf_clean\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'df_clean' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# dataframe with cleaned string values\n",
+    "df_clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dataframe with cleaned string values\n",
+    "df_clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dataframe with cleaned string values\n",
+    "df_clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-19T18:57:01.193009Z",
+     "start_time": "2020-08-19T18:57:00.736Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# dataframe with cleaned string values\n",
+    "df_clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-19T18:57:01.184091Z",
+     "start_time": "2020-08-19T18:57:00.693584Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_clean' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-10d117f39786>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# dataframe with cleaned string values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf_clean\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'df_clean' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# dataframe with cleaned string values\n",
+    "df_clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dataframe with cleaned string values\n",
+    "df_clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dataframe with cleaned string values\n",
+    "df_clean"
    ]
   },
   {
@@ -107,70 +230,6 @@
     "    ]\n",
     "})\n",
     "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-08-07T21:38:38.714785Z",
-     "start_time": "2020-08-07T21:38:37.643452Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7fedd81f1608430caf4b2113068b266f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Box(children=(VBox(children=(HBox(children=(Dropdown(description='Column:', options=('city', 'state'), value='…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "        var ind = IPython.notebook.get_selected_index();\n",
-       "        var cell = IPython.notebook.get_cell(ind);\n",
-       "        var text = cell.get_text();\n",
-       "        cell.set_text(text.concat(atob(\"CmRmWyJjaXR5Il0gPSBkZlsiY2l0eSJdLnJlcGxhY2UoWyJtaXNzaXNzaXBwaSIsICJtaXNzc2lzaXBwcGkiLCAiTWlzaXNpcGkiXSwgIk1pc3Npc3NpcHBpIik=\")));\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "        var code = IPython.notebook.insert_cell_below('code');\n",
-       "        code.set_text(atob(\"IyBkYXRhZnJhbWUgd2l0aCBjbGVhbmVkIHN0cmluZyB2YWx1ZXMKZGZfY2xlYW4=\"));\n",
-       "        code.execute();\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "clean_duplication(df)\n",
-    "# live code export\n",
-    "df[\"city\"] = df[\"city\"].replace([\"mississippi\", \"misssisipppi\", \"Misisipi\"], \"Mississippi\")"
    ]
   },
   {
@@ -452,6 +511,70 @@
     "df_clean = pd.DataFrame(\n",
     "    {\"city\": [\"Mississippi\", \"Dayton\", \"Layton\", \"Bayton\"]})\n",
     "df_clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-07T21:38:38.714785Z",
+     "start_time": "2020-08-07T21:38:37.643452Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7fedd81f1608430caf4b2113068b266f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Box(children=(VBox(children=(HBox(children=(Dropdown(description='Column:', options=('city', 'state'), value='…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "        var ind = IPython.notebook.get_selected_index();\n",
+       "        var cell = IPython.notebook.get_cell(ind);\n",
+       "        var text = cell.get_text();\n",
+       "        cell.set_text(text.concat(atob(\"CmRmWyJjaXR5Il0gPSBkZlsiY2l0eSJdLnJlcGxhY2UoWyJtaXNzaXNzaXBwaSIsICJtaXNzc2lzaXBwcGkiLCAiTWlzaXNpcGkiXSwgIk1pc3Npc3NpcHBpIik=\")));\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "        var code = IPython.notebook.insert_cell_below('code');\n",
+       "        code.set_text(atob(\"IyBkYXRhZnJhbWUgd2l0aCBjbGVhbmVkIHN0cmluZyB2YWx1ZXMKZGZfY2xlYW4=\"));\n",
+       "        code.execute();\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "clean_duplication(df)\n",
+    "# live code export\n",
+    "df[\"city\"] = df[\"city\"].replace([\"mississippi\", \"misssisipppi\", \"Misisipi\"], \"Mississippi\")"
    ]
   },
   {
