--- a/clean_lat_long.ipynb
+++ b/clean_lat_long.ipynb
@@ -13,7 +13,9 @@
     "2. degrees and decimal minutes: 40° 26.767′ N 79° 58.933′ W\n",
     "3. sexagesimal degree: degrees, minutes, and seconds : 40° 26′ 46″ N 79° 58′ 56″ W\n",
     "\n",
-    "Default output two columns (latitude, longitude) in decimal format. Add columns or replace?"
+    "Default output two columns (latitude, longitude) in decimal format. Add columns or replace?\n",
+    "\n",
+    "TODO output [format](https://www.codeproject.com/Articles/15659/Longitude-Latitude-String-Parser-and-Formatter)"
    ]
   },
   {
@@ -39,7 +41,7 @@
     "def clean_lat_long(\n",
     "    df: Union[pd.DataFrame, dd.DataFrame],\n",
     "    column: Union[str, List[str, str]],\n",
-    "    output_format: Union[\"decimal_degrees\", \"degrees_and_decimal_minutes\", \"sexagesimal_degree\"]\n",
+    "    output_format: Union[\"decimal\", \"decimal_degrees\", \"degrees_and_decimal_minutes\", \"sexagesimal_degree\"]\n",
     "    split: bool = False,\n",
     ")"
    ]
@@ -108,19 +110,27 @@
    "source": [
     "# Resources\n",
     "\n",
-    "[Geopy](https://github.com/geopy/geopy/tree/3cb2113a46555b0c09554475844cafa1e4eee511): Converts a string to a latitude/longitude point [using regex](https://geopy.readthedocs.io/en/latest/#geopy.point.Point.from_string). [code](https://github.com/geopy/geopy/blob/1c1cfd516c095abc38fe3ff00d82071d0290edaf/geopy/point.py#L387)\n",
+    "## Python\n",
     "\n",
-    "Regular expresions for latitude longitude [here](https://stackoverflow.com/questions/3518504/regular-expression-for-matching-latitude-longitude-coordinates)"
+    "* [Geopy](https://github.com/geopy/geopy/tree/3cb2113a46555b0c09554475844cafa1e4eee511): Converts a string to a latitude/longitude point [using regex](https://geopy.readthedocs.io/en/latest/#geopy.point.Point.from_string). [code](https://github.com/geopy/geopy/blob/1c1cfd516c095abc38fe3ff00d82071d0290edaf/geopy/point.py#L387)\n",
+    "\n",
+    "* [latlon3](https://github.com/eelcovv/LatLon): string lat/long [validate/clean](https://github.com/eelcovv/LatLon/blob/master/LatLon3/LatLon.py#L313)\n",
+    "\n",
+    "## Other\n",
+    "\n",
+    "* Regular expresions for latitude longitude [here](https://stackoverflow.com/questions/3518504/regular-expression-for-matching-latitude-longitude-coordinates)\n",
+    "\n",
+    "* Stackoverflow [post](https://stackoverflow.com/questions/10852955/python-batch-convert-gps-positions-to-lat-lon-decimals)\n",
+    "\n",
+    "# Datasets\n",
+    "\n",
+    "* Potential dirty [datasets](http://www.bom.gov.au/australia/stormarchive/)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "# Extension: From latitude/longitude to address\n",
-    "\n",
-    "Geopy uses a server to transform a lat/long string into its closest street address ([code](https://github.com/geopy/geopy/blob/3cb2113a46555b0c09554475844cafa1e4eee511/geopy/geocoders/ignfrance.py#L231))."
-   ]
+   "source": []
   }
  ],
  "metadata": {
