--- a/clean_address.ipynb
+++ b/clean_address.ipynb
@@ -20,11 +20,16 @@
     "* `building` (The Estates)\n",
     "* `city` (New York)\n",
     "* `state` (NY)\n",
-    "* `zipcode` (53703)\n",
-    " \n",
-    " # API\n",
-    " \n",
-    " ## Function header"
+    "* `zipcode` (53703)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# API\n",
+    "  \n",
+    "## Function header"
    ]
   },
   {
@@ -73,7 +78,7 @@
     "| --- |\n",
     "| 1600 Pennsylvania Avenue, Washington, DC 20500 |\n",
     "\n",
-    "`clean(df, \"address\", output_format = \"house_number street street_suffix_abbr. \\t city \\t state_abbr\")` returns\n",
+    "`clean_address(df, \"address\", output_format = \"house_number street street_suffix_abbr. \\t city \\t state_abbr\")` returns\n",
     "\n",
     "| address | house_number_street_street_suffix | city | state|\n",
     "| --- | --- | --- | --- |\n",
@@ -93,7 +98,7 @@
     "| --- |\n",
     "| 1600 Pennsylvania Avenue, Washington, DC 20500 |\n",
     "\n",
-    "`clean(df, \"address\", split=True)` returns\n",
+    "`clean_address(df, \"address\", split=True)` returns\n",
     "\n",
     "| address | house_number | street | street_suffix | city | state| zipcode |\n",
     "| --- | --- | --- | --- | --- | --- | --- |\n",
@@ -126,13 +131,6 @@
     "\n",
     "2. [How to parse freeform street/postal address out of text, and into components](https://stackoverflow.com/questions/11160192/how-to-parse-freeform-street-postal-address-out-of-text-and-into-components)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
