--- a/clean_address.ipynb
+++ b/clean_address.ipynb
@@ -68,7 +68,7 @@
     "* `state_full` (eg \"New York\")\n",
     "* `zipcode`\n",
     "\n",
-    "The **default output format** is `\"(building) house_number street_prefix_abbr. street street_suffix_abbr. apartment, city, state_abbr zipcode country\"`, omitting any missing attributes.\n",
+    "The **default output format** is `\"(building) house_number street_prefix_abbr. street street_suffix_abbr. apartment, city, state_abbr zipcode\"`, omitting any missing attributes.\n",
     "\n",
     "The user can also specify how to split the address into columns using `\"\\t\"`. \n",
     "\n",
