--- a/clean_ip.ipynb
+++ b/clean_ip.ipynb
@@ -15,30 +15,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-08-20T21:47:34.730218Z",
-     "start_time": "2020-08-20T21:47:34.673763Z"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-d4c20afbc8b9>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-d4c20afbc8b9>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    iptype: Union[\"ipv4\", \"ipv6\", \"both\"] = \"both\",\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def clean_ip(\n",
     "    df: Union[pd.DataFrame, dd.DataFrame]\n",
     "    col: str\n",
     "    iptype: Union[\"ipv4\", \"ipv6\", \"both\"] = \"both\",\n",
-    "    output_format: str = \"compressed\", # \"full\"\n",
-    ")"
+    "    output_format: Union[\"compressed\", \"full\"] = \"compressed\",\n",
+    "):"
    ]
   },
   {
