--- a/clean_lat_long.ipynb
+++ b/clean_lat_long.ipynb
@@ -11,39 +11,37 @@
     "Use [three common formats](https://en.wikipedia.org/wiki/Geographic_coordinate_conversion#:~:text=The%20numerical%20values%20for%20latitude,%C2%B0%20N%2079.982%C2%B0%20W):\n",
     "1. decimal degrees: 40.446° N 79.982° W\n",
     "2. degrees and decimal minutes: 40° 26.767′ N 79° 58.933′ W\n",
-    "3. sexagesimal degree: degrees, minutes, and seconds : 40° 26′ 46″ N 79° 58′ 56″ W\n",
-    "\n",
-    "Default output two columns (latitude, longitude) in decimal format. Add columns or replace?\n",
-    "\n",
-    "TODO output [format](https://www.codeproject.com/Articles/15659/Longitude-Latitude-String-Parser-and-Formatter)"
+    "3. sexagesimal degree: degrees, minutes, and seconds : 40° 26′ 46″ N 79° 58′ 56″ W"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-08-07T23:26:19.432613Z",
-     "start_time": "2020-08-07T23:26:19.422144Z"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-d070386f60e9>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-d070386f60e9>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    unify=False;\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def clean_lat_long(\n",
     "    df: Union[pd.DataFrame, dd.DataFrame],\n",
-    "    column: Union[str, List[str, str]],\n",
-    "    output_format: Union[\"decimal\", \"decimal_degrees\", \"degrees_and_decimal_minutes\", \"sexagesimal_degree\"]\n",
+    "    column: str,\n",
+    "    output_format: Union[\"dd\", \"ddh\", \"dm\", \"dms\"]\n",
     "    split: bool = False,\n",
-    ")"
+    "):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Parameters\n",
+    "\n",
+    "* `df`: Union[*pandas.DataFrame, dask.DataFrame*] &mdash; the data frame to be transformed \n",
+    "* `column`: *str* &mdash; the name of the column to be cleaned\n",
+    "* `output_format`*str* &mdash; the output format of the coordinates. Can be\n",
+    "    * \"dd\": decimal degrees (the entire co-ordinate, may be negative or positive) \n",
+    "    * \"ddh\": decimal degrees with hemisphere\n",
+    "    * \"dm\": degrees minutes\n",
+    "    * \"dms\": degrees minutes seconds\n",
+    "* `split` *bool* &mdash; split into one column with latitude and one column with longitude"
    ]
   },
   {
@@ -68,35 +66,36 @@
    "source": [
     "## Example 1\n",
     "\n",
-    "| lat/long |\n",
+    "| coord |\n",
     "| --- |\n",
     "| \"40.446° N 79.982° W\" |\n",
     "| \"40° 26.767′ N 79° 58.933′ W\" |\n",
     "| \"40° 26′ 46″ N 79° 58′ 56″ W\" |\n",
     "\n",
-    "`clean_lat_long(df, \"lat/long\")`\n",
+    "`clean_lat_long(df, \"coord\")`\n",
     "\n",
-    "| lat | long |\n",
-    "| --- | --- |\n",
-    "| 40.446 | 79.982 |\n",
-    "| 40.446 | 79.982 |\n",
-    "| 40.446 | 79.982 |\n",
+    "\n",
+    "| coord |\n",
+    "| --- |\n",
+    "| (40.446, 79.982) |\n",
+    "| (40.446, 79.982) |\n",
+    "| (40.446, 79.982) |\n",
     "\n",
     "## Example 2\n",
     "\n",
-    "| lat | long |\n",
-    "| --- | --- |\n",
-    "| \"40.446° N\" | \"79.982° W\" |\n",
-    "| 40.446 | 79.982 |\n",
-    "| \"40° 26′ 46″ N\" | \"79° 58′ 56″ W\" |\n",
-    "\n",
-    "`clean_lat_long(df, [lat, long], unify=True)`\n",
-    "\n",
-    "| lat/long |\n",
+    "| coord |\n",
     "| --- |\n",
     "| \"40.446° N 79.982° W\" |\n",
-    "| \"40.446° N 79.982° W\" |\n",
-    "| \"40.446° N 79.982° W\" |"
+    "| \"40° 26.767′ N 79° 58.933′ W\" |\n",
+    "| \"40° 26′ 46″ N 79° 58′ 56″ W\" |\n",
+    "\n",
+    "`clean_lat_long(df, \"coord\", split=True)`\n",
+    "\n",
+    "| coord | latitude | longitude|\n",
+    "| --- | --- | --- |\n",
+    "| \"40.446° N 79.982° W\" | 40.446 | 79.982 |\n",
+    "| \"40° 26.767′ N 79° 58.933′ W\" | 40.446 | 79.982 |\n",
+    "| \"40° 26′ 46″ N 79° 58′ 56″ W\" | 40.446 | 79.982 |"
    ]
   },
   {
@@ -122,15 +121,12 @@
     "\n",
     "* Stackoverflow [post](https://stackoverflow.com/questions/10852955/python-batch-convert-gps-positions-to-lat-lon-decimals)\n",
     "\n",
+    "* Alternative [formatting](https://www.codeproject.com/Articles/15659/Longitude-Latitude-String-Parser-and-Formatter)\n",
+    "\n",
     "# Datasets\n",
     "\n",
     "* Potential dirty [datasets](http://www.bom.gov.au/australia/stormarchive/)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
