--- a/clean_text.ipynb
+++ b/clean_text.ipynb
@@ -11,46 +11,31 @@
     "\n",
     "## Features\n",
     "* Remove excess whitespace (1 space between words)\n",
-    "* Strip beginning and trailing whitespace\n",
+    "* Strip leading and trailing whitespace\n",
     "* Standardize missing values\n",
     "* Convert to lowercase\n",
     "* Remove diacritics\n",
     "* Remove digits\n",
     "* Remove punctuation\n",
     "* Remove stopwords\n",
-    "* Remove whitespace\n",
-    "* Remove specific text?\n"
+    "* Remove specific text\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-08-07T22:28:43.496441Z",
-     "start_time": "2020-08-07T22:28:43.487646Z"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-973a13604540>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-973a13604540>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    remove_digits: bool = False,\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def clean_text(\n",
     "    df: Union[pd.DataFrame, dd.DataFrame],\n",
     "    column: str,\n",
     "    lowercase: bool = False,\n",
     "    remove_diacritics: bool = True\n",
+    "    remove_whitespace: bool = True,\n",
     "    remove_digits: bool = False,\n",
     "    remove_punctuation: bool = False,\n",
     "    remove_stopwords: bool = False,\n",
-    "    remove_whitespace: bool = False,\n",
     "    remove_text: Optional[str] = None, \"{}\"\n",
     "):"
    ]
@@ -61,7 +46,7 @@
    "source": [
     "# Implementation\n",
     "\n",
-    "1. Regular expressions to remove and replace as appropriate\n"
+    "1. String parsing probably using regular expressions to remove and replace as appropriate\n"
    ]
   },
   {
