--- a/clean_country.ipynb
+++ b/clean_country.ipynb
@@ -18,30 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-08-07T18:30:32.089001Z",
-     "start_time": "2020-08-07T18:30:32.081355Z"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-25-477dfe41307b>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-25-477dfe41307b>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    input_format: Union[\"auto\", *output_format],\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def clean_country(\n",
     "    df: Union[pd.DataFrame, dd.DataFrame],\n",
     "    column: str,\n",
-    "    input_format: Union[\"auto\", *output_format],\n",
+    "    input_format: Union[\"auto\", \"name\", \"official\", \"alpha-2\", \"alpha-3\", \"numeric\"],\n",
     "    output_format: Union[\"name\", \"official\", \"alpha-2\", \"alpha-3\", \"numeric\"],\n",
-    "    language: TODO\n",
     "):"
    ]
   },
@@ -117,11 +102,6 @@
     "standard_names = coco.convert(names=some_names, to='name_short')\n",
     "print(standard_names)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
