--- a/clean_address.ipynb
+++ b/clean_address.ipynb
@@ -44,6 +44,7 @@
     "    input_format: str = None,\n",
     "    output_format: str = None,\n",
     "    split: bool = False\n",
+    "    inplace: bool = False,\n",
     ")"
    ]
   },
