--- a/clean_ip.ipynb
+++ b/clean_ip.ipynb
@@ -22,8 +22,8 @@
     "def clean_ip(\n",
     "    df: Union[pd.DataFrame, dd.DataFrame]\n",
     "    col: str\n",
-    "    iptype: Union[\"ipv4\", \"ipv6\", \"both\"] = \"both\",\n",
-    "    output_format: Union[\"compressed\", \"full\"] = \"compressed\",\n",
+    "    input_format: Union[\"ipv4\", \"ipv6\", \"auto\"] = \"auto\",\n",
+    "#     output_format: Union[\"compressed\", \"full\"] = \"compressed\",\n",
     "):"
    ]
   },
