--- a/clean_lat_long.ipynb
+++ b/clean_lat_long.ipynb
@@ -23,7 +23,8 @@
     "def clean_lat_long(\n",
     "    df: Union[pd.DataFrame, dd.DataFrame],\n",
     "    column: str,\n",
-    "    output_format: Union[\"dd\", \"ddh\", \"dm\", \"dms\"]\n",
+    "    input_format: Union[\"dd\", \"ddh\", \"dm\", \"dms\", \"auto\"] = \"auto\"\n",
+    "    output_format: Union[\"dd\", \"ddh\", \"dm\", \"dms\"] = \"dd\",\n",
     "    split: bool = False,\n",
     "):"
    ]
