--- a/clean_ml.ipynb
+++ b/clean_ml.ipynb
@@ -54,10 +54,15 @@
     "    df: Union[pd.DataFrame, dd.DataFrame],\n",
     "    handle_missing_values: str = \"impute\", # or \"drop\"\n",
     "    numerical_transform: str = \"standard_scaler\", # or \"minmax_scaler\", None\n",
-    "    max_nominal_values: int = 30,\n",
+    "#     one_hot_enocde: bool = True,\n",
+    "    max_nominal_values: int = 30, # drop columns with more than 30 unique categorical values\n",
     "    max_missing_values_percent: float = 70,\n",
     "    max_repeated_value_percent: float = 70,\n",
     "    max_unique_integers_percent: float = 99,\n",
+    "#     drop_columns_with = {}\n",
+    "    include_components = {\"onehot\": True, }\n",
+    "    exclude_components = {}\n",
+    "    \n",
     ")"
    ]
   },
