--- a/clean_text.ipynb
+++ b/clean_text.ipynb
@@ -30,14 +30,19 @@
     "def clean_text(\n",
     "    df: Union[pd.DataFrame, dd.DataFrame],\n",
     "    column: str,\n",
-    "    lowercase: bool = False,\n",
-    "    remove_diacritics: bool = True\n",
-    "    remove_whitespace: bool = True,\n",
-    "    remove_digits: bool = False,\n",
-    "    remove_punctuation: bool = False,\n",
-    "    remove_stopwords: bool = False,\n",
-    "    remove_text: Optional[str] = None, \"{}\"\n",
-    "):"
+    "#     lowercase: bool = False,\n",
+    "#     remove_diacritics: bool = True\n",
+    "#     remove_whitespace: bool = True,\n",
+    "#     remove_digits: bool = False,\n",
+    "#     remove_punctuation: bool = False,\n",
+    "#     remove_stopwords: Union[List, bool] = False, # True -> remove, False -> don't, List -> provided\n",
+    "#     remove_text: Optional[str] = None, \"{}\"\n",
+    "    default: bool = True # enable all\n",
+    "    include_components = {\"lowercase\": False, \"stopwords\": func()}\n",
+    "    customized\n",
+    "    udf ?\n",
+    "):\n",
+    "    "
    ]
   },
   {
