--- a/clean_phone_yi_original.ipynb
+++ b/clean_phone_yi_original.ipynb
@@ -4,38 +4,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# `clean_phone()` API"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def clean_phone(\n",
-    "    df: Union[pd.DataFrame, dd.DataFrame],\n",
-    "    col: str,\n",
-    "    output_format: str = \"xxx-xxx-xxxx\",\n",
-    "    fix_missing: str = \"Empty\",\n",
-    "    split: bool = False,\n",
-    "    inplace: bool = False,\n",
-    "    report: bool = True,\n",
-    "):"
+    "clean_phone(\n",
+    "\n",
+    "**dataframe**, \n",
+    "\n",
+    "**column**,\n",
+    "\n",
+    "**target_format**: \"xxx-xxx-xxxx\",\n",
+    "\n",
+    "**fix_missing**: \"Empty\",\n",
+    "\n",
+    "**customized_rule** = None\n",
+    "\n",
+    "**split** = False\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**df: pandas.DataFrame**\n",
+    "**dataframe: pandas.DataFrame**\n",
     "\n",
     "+ Input dataframe\n",
     "\n",
-    "**col: str**\n",
+    "**column: str**\n",
     "\n",
     "+ The column to be transformed\n",
-    "+ Can be parsed into supported phone patterns\n",
+    "+ Each value within the column is detected, if it's detected as phone type, then it's cleaned. Otherwise, the function does nothing to the value.\n",
+    "+ Phone_Type_Detection (is_valid_phone) and parsing\n",
+    "    + Can be parsed into supported phone patterns\n",
     "    + Examples:\n",
     "        + +1-404-2000-000\n",
     "        + 4042000000\n",
@@ -43,7 +41,7 @@
     "    + Refers to:\n",
     "        + python-phonenumbers.is_possible_number() https://github.com/daviddrysdale/python-phonenumbers/blob/dev/python/phonenumbers/phonenumberutil.py\n",
     "\n",
-    "**output_format: str**\n",
+    "**target_format: str**\n",
     "\n",
     "+ Defines the target format after transformation\n",
     "+ Trim the input phone, then parse input phone to different components\n",
@@ -61,6 +59,11 @@
     "+ auto: do the fixing based on default rule\n",
     "    + majority: set the country code to the country code appears most in the column\n",
     "    + nearby: set the missing component to the nearest value in column\n",
+    "\n",
+    "**customized_rule: Function**:\n",
+    "\n",
+    "+ Defines customized format transfomation function\n",
+    "+ Takes input string and output the corresponding output string\n",
     "\n",
     "**split: Boolean**\n",
     "\n",
